# qt-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
qmlfmt/: main.py
qmlformatter/: main.py  qmlformat
qmlformatter/lib/: libQt6Network.so.6  libQt6QmlCompiler.so.6
tests/test_formatter/: sample.qml  test_formatter.py
