[tool.poetry]
name = "qt-pre-commit-hooks"
version = "0.1.0"
description = "pre-commit hooks for Qt-qml"
authors = ["Nir <88795475+nrbnlulu@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
PySide6 = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
