# setup.cfg
[metadata]
name = qt-pre-commit-hooks
description = pre-commit hooks for Qt-qml
version = 0.1.0
author = Nir <88795475+nrbnlulu@users.noreply.github.com>
author_email = alvaradosegurajorge@gmail.com
license = MIT


[options]
packages = find:

[options.entry_points]
console_scripts =
    qmlformatter = qmlformatter.main:main

