# setup.cfg
[metadata]
name = qt-hooks
description = pre-commit hooks for Qt-qml
version = 0.1.0
author = Nir <88795475+nrbnlulu@users.noreply.github.com>
author_email = alvaradosegurajorge@gmail.com
license = MIT


[options]
packages = find:

[options.entry_points]
console_scripts =
    qmlformatter = qmlformatter.main:main

[options.extras_require]
tests = pytest>=7.2.1


[options.package_data]
qmlformatter = **/*.so*